--- a/.github/style.css
+++ b/.github/style.css
@@ -1,9 +1,38 @@
 h2 {
   font-weight: 700;
-  color: #0d6efd;
+  color: #0b3a80;
 }
 
 .card img {
-  height: 180px;
+  height: 220px;
+  object-fit: cover;
+}
+
+.text-center{
+  color: rgb(78, 78, 121);
+  font-weight: 1000;
+}
+
+body{
+  background-color: #687b7eb6;
+}
+
+.card{
+  border-width: 5px;
+  border-color: rgb(98, 122, 141);
+  border-style: solid;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
+  background: linear-gradient(to top,rgb(209, 209, 209), rgb(255, 255, 255));
+}
+
+.tout > img {
+  width: 100%;
+  height: 400px;      
+  object-fit: cover;  
+  display: block;
+}
+
+.hero-top {
+  height: 400px;
   object-fit: cover;
 }
